tests/compile-fail/no_i64.stderr
error: can't be parsed as i64
  --> tests/compile-fail/no_i64.rs:12:5
   |
12 |     D = 0xf000_0000_0000_0000,
   |     ^
